--- a/DanceCalc/m4d/Views/Home/About.cshtml
+++ b/DanceCalc/m4d/Views/Home/About.cshtml
@@ -30,7 +30,7 @@
             Aside from the above being a very small part of the solution, the platform isn't a particularly good test case.  I chose it because I was interested in trying my hand at windows phone programming
             not because I thought it was the best initial platform for my circumstances at the time.  <p>More recently I pulled most of the functionality from that application to make it available on the site.</p>
         </p>
-        <p><a class="btn btn-default" href="/Home/Counter">Use the counter&raquo;</a></p>
+        <p><a class="btn btn-default" href="/home/counter">Use the counter&raquo;</a></p>
     </div>
     <div class="col-md-3">
         <h2>Besides, what I really want to do</h2>
@@ -40,6 +40,6 @@
             from a number of different sources, merged and edited, so that I've got at least a start of a database of song title/artist/albums associated with various dances and provided deep links to Xbox Music, ITunes and Amazon where I could.  In the long run I would like this
             to be crowd sourced both with new content and ratings, but for now enjoy the browsing and please use the links when buying music that you've discovered here, as that will help fund improvements.
         </p>
-        <p><a class="btn btn-default" href="/Song">Browse the Song Database&raquo;</a></p>
+        <p><a class="btn btn-default" href="/song">Browse the Song Database&raquo;</a></p>
     </div>
 </div>
