--- a/DanceCalc/m4d/Views/Dance/Index.cshtml
+++ b/DanceCalc/m4d/Views/Dance/Index.cshtml
@@ -8,7 +8,7 @@
 
 <ol class="breadcrumb">
     <li><a href="/">Music4Dance</a></li>
-    <li><a href="/Dances">Dances</a></li>
+    <li><a href="/dances">Dances</a></li>
 </ol>
 
 @{
@@ -21,7 +21,7 @@
         var item = Model.FirstOrDefault(m => m.DanceId == box);
 
         <div class="list-group col-sm-4">
-            <h4><span id="@item.DanceName" class="btn btn-info btn-lg dance">@item.DanceName <span id="@item.DanceId" class="badge">@item.SongCount</span></span></h4>
+            <h4><span id="@item.SeoName" class="btn btn-info btn-lg dance">@item.DanceName <span id="@item.DanceId" class="badge">@item.SongCount</span></span></h4>
             @{Html.RenderPartial("_DanceList", item.Children);}
         </div>
     }
