--- a/DanceCalc/m4d/Views/Dance/_DanceList.cshtml
+++ b/DanceCalc/m4d/Views/Dance/_DanceList.cshtml
@@ -4,7 +4,7 @@
 {
     if (item.SongCount > 0)
     {
-        <a id="@item.DanceName" href="#" class="list-group-item dance">
+        <a id="@item.SeoName" href="#" class="list-group-item dance">
             <span id="@item.DanceId" class="badge">@item.SongCount</span>
             @if (ViewBag.ShowTempo)
             {
