--- a/DanceCalc/m4d/Views/Shared/_Counter.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Counter.cshtml
@@ -6,7 +6,7 @@
     <div class="btn-group col-xs-6">
         @Html.Partial("_MeterChooser")
     </div>
-    <a class="btn btn-info col-xs-1" href="/Home/CounterHelp"><span class="glyphicon glyphicon-question-sign"></span></a>
+    <a class="btn btn-info col-xs-1" href="/home/counterhelp"><span class="glyphicon glyphicon-question-sign"></span></a>
 </div>
 
 @*
