Build an auto-merge album task as a precursor to re-running all of the album data from the music services

--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -24,6 +24,7 @@
     <li>@Html.ActionLink("Clean up Tempi", "CleanTempi")</li>
     <li>@Html.ActionLink("Fix up Artists", "FixArtists")</li>
     <li>@Html.ActionLink("Update Albums", "UpdateAlbums")</li>
+    <li>@Html.ActionLink("Remove Lookup History", "CleanLookupHistory")</li>
     @*<li>@Html.ActionLink("Update Tag Types", "UpdateTagTypes")</li>*@
     <li>@Html.ActionLink("Update Tag Sumaries", "UpdateTagSumamries")</li>
     @*<li>@Html.ActionLink("Add Dance Groups", "AddDanceGroups")</li>
