Fix creating a new pseudo user

--- a/DanceCalc/m4d/Views/ApplicationUsers/Index.cshtml
+++ b/DanceCalc/m4d/Views/ApplicationUsers/Index.cshtml
@@ -117,5 +117,6 @@
         </td>
     </tr>
 }
-
 </table>
+
+@Html.ActionLink("New Pseudo User", "Create", null, new { @class = "btn btn-default", role = "button" })
