Build the code to check all three music services + resultant database snapshot

--- a/DanceCalc/m4d/Views/Song/BatchMusicService.cshtml
+++ b/DanceCalc/m4d/Views/Song/BatchMusicService.cshtml
@@ -30,4 +30,6 @@
     @Html.ActionLink("10", "BatchMusicService", new { filter = ViewBag.SongFilter, type=ViewBag.SearchType, options=ViewBag.Options, count = 10 }, new { @class = "btn btn-default", role = "button" });
     @Html.ActionLink("100", "BatchMusicService", new { filter = ViewBag.SongFilter, type = ViewBag.SearchType, options = ViewBag.Options, count = 100 }, new { @class = "btn btn-default", role = "button" });
     @Html.ActionLink("500", "BatchMusicService", new { filter = ViewBag.SongFilter, type = ViewBag.SearchType, options = ViewBag.Options, count = 500 }, new { @class = "btn btn-default", role = "button" });
+    @Html.ActionLink("2500", "BatchMusicService", new { filter = ViewBag.SongFilter, type = ViewBag.SearchType, options = ViewBag.Options, count = 2500 }, new { @class = "btn btn-default", role = "button" });
+    @Html.ActionLink("5000", "BatchMusicService", new { filter = ViewBag.SongFilter, type = ViewBag.SearchType, options = ViewBag.Options, count = 5000 }, new { @class = "btn btn-default", role = "button" });
 }
