--- a/DanceCalc/m4d/Views/Song/Album.cshtml
+++ b/DanceCalc/m4d/Views/Song/Album.cshtml
@@ -11,7 +11,7 @@
 <h2>Album: @Model.Title</h2>
 @if (!string.IsNullOrWhiteSpace(@Model.Artist))
 {
-    <h2>Artist: @Model.Artist</h2>
+    <h3>Artist: @Html.ActionLink(@Model.Artist, "search", "song", new { searchString = @Model.Artist, dances = "ALL" }, null)</h3>
 }
 
 <div class="row col-xs-12">
