--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -10,6 +10,11 @@
     <li>@Html.ActionLink("List Users", "Index", "ApplicationUsers")</li>
 </ul>
 
+<h3>Tags</h3>
+<ul>
+    <li>@Html.ActionLink("Tag List", "index", "tag")</li>
+</ul>
+
 <h3>Logging</h3>
 <ul>
     <li>@Html.ActionLink("Log", "Index", "Log")</li>
