--- a/DanceCalc/m4d/Views/Tag/Edit.cshtml
+++ b/DanceCalc/m4d/Views/Tag/Edit.cshtml
@@ -10,12 +10,28 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>TagType</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Key)
+
+        @*@if (Model.Ring != null)
+        {
+            int i = 0;
+            foreach (var child in Model.Ring)
+            {
+                @Html.Hidden(string.Format("Ring[{0}].Key",i), child.Key);
+                i += 1;
+            }
+        }*@
+        <div class="form-group">
+            @Html.Label("Key", new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.Editor("NewKey", new { htmlAttributes = new { @class = "form-control" } })
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Count, htmlAttributes: new { @class = "control-label col-md-2" })
