--- a/DanceCalc/m4d/Views/Song/Tags.cshtml
+++ b/DanceCalc/m4d/Views/Song/Tags.cshtml
@@ -2,13 +2,27 @@
 @using PagedList.Mvc;
 
 @{
-    ViewBag.Title = "Tags";
-    ViewBag.SongFilter = new m4dModels.SongFilter();
     var dances = (IList<m4dModels.SongCounts>)ViewBag.Dances;
     IList<DanceLibrary.DanceObject> selected = ViewBag.SelectedDances;
+    
+    System.Text.StringBuilder sb = new System.Text.StringBuilder();
+    string sep = string.Empty;
+    if (ViewData.ContainsKey("Tags"))
+    {
+        foreach (var tag in ViewBag.Tags as ICollection<m4dModels.TagType>)
+        {
+            sb.Append(sep);
+            sb.Append(tag.Value);
+            sep = ", ";
+        }
+    }
+    string prettyTags = sb.ToString();
+    ViewBag.Title = string.Format("Songs tagged with {0}", prettyTags);
+    ViewBag.SongFilter = new m4dModels.SongFilter();
 }
 
-<h2>@ViewBag.Tags</h2>
+@*TODO: Make these linkable tags*@
+<h2>@prettyTags</h2>
 
 <div class="row col-xs-12">
     @{Html.RenderPartial("_ListSongs", @Model, ViewData);}
