--- a/DanceCalc/m4d/Views/Tag/Index.cshtml
+++ b/DanceCalc/m4d/Views/Tag/Index.cshtml
@@ -1,11 +1,9 @@
 ﻿@model IEnumerable<m4dModels.TagType>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Tag Editor";
 }
-
-<h2>Index</h2>
-
+<h2>Tags</h2>
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
