--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Index";
 }
 
@@ -31,7 +30,7 @@
     <li>@Html.ActionLink("Update Albums", "UpdateAlbums")</li>
     <li>@Html.ActionLink("Remove Lookup History", "CleanLookupHistory")</li>
     @*<li>@Html.ActionLink("Update Tag Types", "UpdateTagTypes")</li>*@
-    <li>@Html.ActionLink("Update Tag Sumaries", "UpdateTagSumamries")</li>
+    <li>@Html.ActionLink("Update Tag Summaries", "UpdateTagSummaries")</li>
     @*<li>@Html.ActionLink("Add Dance Groups", "AddDanceGroups")</li>
     <li>@Html.ActionLink("Clean Tags", "CleanTags")</li>*@
     <li>@Html.ActionLink("Infer Dance Types", "InferDanceTypes")</li>
