--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -23,17 +23,17 @@
     <div class="col-md-4">
         <h1 class="blog">Info</h1>
         <p class="neutral">
-            Are you looking for more information on how music relates to dance, follow our <a href="http://blog.music4dance.net">blog</a>.
+            Are you looking for more information on how music relates to dance, follow our <a href="https://www.music4dance.net/blog">blog</a>.
         </p>
-        <h4 class="blog">Introducing Blog.Music4Dance.Net</h4>
-        <p class="neutral">I’m an amateur dancer and with some training in music who also happens to be a professional software engineer. I love dancing... <a href="http://blog.music4dance.net/hello-world/">[Read more]</a> </p>
+        <h4 class="blog">Introducing Music4Dance.Net/Blog</h4>
+        <p class="neutral">I’m an amateur dancer and with some training in music who also happens to be a professional software engineer. I love dancing... <a href="https://www.music4dance.net/blog/hello-world/">[Read more]</a> </p>
         <h4 class="blog">The Two Questions that Inspired Music4Dance</h4>
-        <p class="neutral">As a beginning ballroom dancer there were two questions that kept coming up... <a href="http://blog.music4dance.net/the-two-questions-that-inspired-music4dance/">[Read more]</a> </p>
+        <p class="neutral">As a beginning ballroom dancer there were two questions that kept coming up... <a href="https://www.music4dance.net/blog/the-two-questions-that-inspired-music4dance/">[Read more]</a> </p>
         <h4 class="blog">Question 1: I’m learning to Cha Cha, where is some great music for practicing?</h4>
-        <p class="neutral">So how do I do that?  Dance generally co-evolves with music, so to get a very traditional song... <a href="http://blog.music4dance.net/the-two-questions-that-inspired-music4dance/">[Read more]</a> </p>
+        <p class="neutral">So how do I do that?  Dance generally co-evolves with music, so to get a very traditional song... <a href="https://www.music4dance.net/blog/the-two-questions-that-inspired-music4dance/">[Read more]</a> </p>
         <h4 class="blog">Question 2: What dance styles can I dance to my favorite song(s)?</h4>
-        <p class="neutral">One of the things that amazes me about the best dance teachers... <a href="http://blog.music4dance.net/question-2-what-dance-styles-can-i-dance-to-my-favorite-songs/">[Read more]</a></p>
+        <p class="neutral">One of the things that amazes me about the best dance teachers... <a href="https://www.music4dance.net/blog/question-2-what-dance-styles-can-i-dance-to-my-favorite-songs/">[Read more]</a></p>
         <h4 class="blog">The Pink Martini Solution</h4>
-        <p class="neutral">Not all artists are created equal when it comes to creating dance-able music.  For instance... <a href="http://blog.music4dance.net/the-pink-martini-solution/">[Read more]</a></p>
+        <p class="neutral">Not all artists are created equal when it comes to creating dance-able music.  For instance... <a href="https://www.music4dance.net/blog/the-pink-martini-solution/">[Read more]</a></p>
     </div>
 </div>
