--- a/DanceCalc/m4d/Views/Shared/_Layout.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Layout.cshtml
@@ -74,7 +74,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Info <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
-                            <li><a href="http://blog.music4dance.net">Blog</a></li>
+                            <li><a href="https://www.music4dance.net/blog">Blog</a></li>
                             <li>@Html.ActionLink("About", "About", "Home")</li>
                         </ul>
                     </li>
