--- a/DanceCalc/m4d/Views/Song/EditCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/EditCore.cshtml
@@ -205,6 +205,7 @@
         <button type="button" id="load-all" class="btn btn-small btn-default" role="button">Search All</button>
         <button type="button" id="load-xbox" class="btn btn-small btn-default" role="button">Xbox</button>
         <button type="button" id="load-itunes" class="btn btn-small btn-default" role="button">ITunes</button>
+        <button type="button" id="load-spotify" class="btn btn-small btn-default" role="button">Spotify</button>
         <button type="button" id="load-amazon" class="btn btn-small btn-default" role="button">Amazon</button>
     </div>
     <table id="service-results" class="table table-striped row col-md-12">
