--- a/DanceCalc/m4d/Views/Song/Index.cshtml
+++ b/DanceCalc/m4d/Views/Song/Index.cshtml
@@ -98,7 +98,11 @@
                 <input type="checkbox" name="services" id="serviceI" value="I" @checkI />
                 ITunes
             </label>
-        </div>
+            <label>
+                <input type="checkbox" name="services" id="serviceS" value="S" @checkI />
+                Spotify
+            </label>
+       </div>
 
         <div class="input-group">
             Tempo between @Html.TextBox("TempoMin", ViewBag.SongFilter.TempoMin as decimal?, new { @class = "input-small" })&nbsp;and&nbsp;
@@ -129,6 +133,7 @@
             @Html.ActionLink("Add New Song", "Create", null, new { @class = "btn btn-default", role = "button" })
             @Html.ActionLink("XBox Batch", "BatchMusicService", new { filter = ViewBag.SongFilter, type = "X", count = 10 }, new { @class = "btn btn-success", role = "button" })
             @Html.ActionLink("ITunes Batch", "BatchMusicService", new { filter = ViewBag.SongFilter, type = "I", count = 10 }, new { @class = "btn btn-success", role = "button" })
+            @Html.ActionLink("Spotify Batch", "BatchMusicService", new { filter = ViewBag.SongFilter, type = "S", count = 10 }, new { @class = "btn btn-success", role = "button" })
             @Html.ActionLink("Amazon Batch", "BatchMusicService", new { filter = ViewBag.SongFilter, type = "A", count = 10 }, new { @class = "btn btn-success", role = "button" })
             @Html.ActionLink("Canonical Batch", "BatchMusicService", new { filter = ViewBag.SongFilter, type = "-", count = 10, options="M" }, new { @class = "btn btn-success", role = "button" })
             @*@Html.ActionLink("XBox Batch", "BatchMusicService", new { filter = ViewBag.SongFilter, type = "X", count = 10, options = "R1" }, new { @class = "btn btn-success", role = "button" });
